// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders Image correctly 1`] = `
<div
  className="image -expand"
>
  <img
    className="image--native"
    data-cfasync="false"
    loading="eager"
    onError={[Function]}
    sizes="(min-width:320px) 800px, 1200px"
    src="https://source.unsplash.com/collection/2102317/1000x650?sig=40349"
  />
</div>
`;

exports[`<Image /> renders Image correctly with optional props 1`] = `
<div
  className="image class -small"
>
  <img
    className="image--native"
    data-cfasync="false"
    loading="eager"
    onError={[Function]}
    sizes="(min-width:320px) 800px, 1200px"
    src="https://source.unsplash.com/collection/2102317/1000x650?sig=40349"
  />
</div>
`;

exports[`<ImageV2 /> renders ImageV2 correctly 1`] = `
<div
  className="image -expand"
>
  <span
    style={
      Object {
        "background": "none",
        "border": 0,
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": "initial",
        "left": 0,
        "margin": 0,
        "opacity": 1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "initial",
      }
    }
  >
    <img
      className="image--native"
      data-nimg="fill"
      decoding="async"
      onError={[Function]}
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
    <noscript>
      <img
        className="image--native"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        onError={[Function]}
        sizes="100vw"
        src="/_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=3840&q=75"
        srcSet="/_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=3840&q=75 3840w"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </noscript>
  </span>
</div>
`;

exports[`<ImageV2 /> renders ImageV2 correctly with optional props 1`] = `
<div
  className="image class -small"
>
  <span
    style={
      Object {
        "background": "none",
        "border": 0,
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": "initial",
        "left": 0,
        "margin": 0,
        "opacity": 1,
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "initial",
      }
    }
  >
    <img
      className="image--native"
      data-nimg="fill"
      decoding="async"
      onError={[Function]}
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
    <noscript>
      <img
        className="image--native"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        onError={[Function]}
        sizes="100vw"
        src="/_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=3840&q=75"
        srcSet="/_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fsource.unsplash.com%2Fcollection%2F2102317%2F1000x650%3Fsig%3D40349&w=3840&q=75 3840w"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": undefined,
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </noscript>
  </span>
</div>
`;
